Add current train schedule table

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,18 @@
+body {
+    background-image: url("../images/train-background.jpg");
+}
 .jumbotron {
     font-family: 'Righteous', cursive;
+}
+
+#train-logo {
+    width:10%;
+}
+
+.bottom-header{
+    margin-left:10%;
+}
+
+.card-header {
+    font-weight: bold;
 }
