Change background color of form and table to lightgrey and opacity to 0.85

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,3 +16,11 @@ body {
 .card-header {
     font-weight: bold;
 }
+.table {
+    opacity: 0.85;
+    background-color: lightgrey;
+}
+
+.form-control {
+    background-color: aliceblue;
+}
